--- a/_posts/books/2025-09-10-다큐프라임_자본주의.md
+++ b/_posts/books/2025-09-10-다큐프라임_자본주의.md
@@ -4,3 +4,52 @@ layout: single
 date: 2025-09-10 20:40:00 -0900
 categories: books
 ---
+
+## 목차
+
+**프롤로그**
+
+- 길 잃은 자본주의, 우리는 무엇을 할 수 있는가
+
+### 1장 ‘빚’이 있어야 돌아가는 사회, 자본주의의 비밀
+1. 물가는 절대 내려가지 않는다
+2. 은행은 있지도 않은 돈을 만들어낸다
+3. 많은 사람들이 한꺼번에 예금을 찾지는 않는다
+4. 중앙은행은 끊임없이 돈을 찍어낼 수밖에 없다
+5. 인플레이션의 거품이 꺼지면 금융위기가 온다
+6. 내가 대출이자를 갚으면 누군가는 파산한다
+7. 은행은 돈 갚을 능력이 없는 사람에게도 대출해 준다
+8. 달러를 찍어내는 FRB는 민간은행이다
+
+### 2장 위기의 시대에 꼭 알아야 할 금융상품의 비밀
+1. 재테크 열기는 우리를 위한 것이 아니었다
+2. 은행이란 수익을 내야 하는 기업일 뿐이다
+3. 8%의 이자를 주는 후순위채권의 비밀
+4. 은행은 판매수수료가 많은 펀드를 권한다
+5. 보험, 묻지도 따지지도 않다가 큰코다친다
+6. 파생상품은 투자를 가장한 도박과 같다
+7. 저축만으로는 행복해질 수 없다
+8. 금융지능이 있어야 살아남는다
+
+### 3장 나도 모르게 지갑이 털리는 소비 마케팅의 비밀
+1. 어릴 때부터 우리는 유혹당한다
+2. 쇼핑할 때는 여자가 훨씬 나약하다
+3. 보안용 CCTV가 당신을 지켜보고 있다
+4. ‘사고 싶다’고 느끼면 ‘필요한’ 것 같다
+5. 소비는 불안에서 시작된다
+6. 필요하지 않아도 친구가 사면 나도 산다
+7. 과소비는 상처받은 마음이다
+8. 자존감이 낮으면 더 많은 돈을 쓴다
+
+### 4장 위기의 자본주의를 구할 아이디어는 있는가
+1. 금융위기는 반복해서 일어난다
+2. 노동만이 최상의 가치다 — 아담 스미스의 『국부론』
+3. 쉬지 않고 일해도 왜 가난한가 — 칼 마르크스의 『자본론』
+4. 실업률을 낮출 정부의 개입을 권하다 — 케인스의 거시경제학
+5. 정부가 커지면 비용도 늘어난다 — 하이에크의 신자유주의
+
+### 5장 복지자본주의를 다시 생각한다
+1. 국민소득이 오르면 내 소득도 오른다?
+2. ‘복지=분배’는 오해다
+3. 복지는 창의성의 원천이다
+4. 시장도 정부도 아닌 국민이 주인이다
